# bana-tts

./: .gitignore  .pre-commit-config.yaml  LICENSE  THIRD_PARTY_NOTICE  analyze.ipynb  app.py  app_gpu.py  data.py  gunicorn-cfg.py  inference.ipynb  inference.py  main.py  params.py  praat_utils.py  pyproject.toml  requirements.txt  train.py  train_multi_speaker.py  utils.py
hifi-gan/: meldataset.py  models.py  xutils.py
model/: diffusion.py  reference_encoder.py  text_encoder.py  tts.py
model/monotonic_align/: __init__.py  core.c
resources/filelists/: eval.txt  synthesis.txt
resources/filelists/bahnar/: test.txt  train.txt  valid.txt
resources/filelists/infore/: test.txt  train.txt  valid.txt
resources/filelists/internal/: test.txt  train.txt  valid.txt
resources/filelists/libri-tts/: valid.txt
resources/filelists/ljspeech/: test.txt  train.txt  valid.txt
text/: __init__.py  bndict.py  cleaners.py  numbers.py  vndict.py
