[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["tqtensor"]
description = "TTS project at BK"
name = "bana-tts"
packages = [{include = "bana_tts"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
cython = "^0.29.34"
einops = "^0.6.1"
flask = "^2.3.2"
gunicorn = "20.1.0"
inflect = "^6.0.4"
librosa = "^0.10.0.post2"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
praat-parselmouth = "^0.4.3"
scipy = "^1.10.1"
tqdm = "^4.65.0"
unidecode = "^1.3.6"
vietnam-number = "^1.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipython = "^8.13.2"
isort = "^5.12.0"
nbqa = {extras = ["toolchain"], version = "^1.7.0"}
pre-commit = "^3.3.2"
toml-sort = "^0.23.1"
